--- a/style.css
+++ b/style.css
@@ -7,3 +7,10 @@ main {
     background-image: url(assets/images/bg.jpg);
     height: 80%;
 }
+
+main.box {
+    height: 80%;
+    width: 100%;
+    opacity: 0.44;
+    background-color: black;
+}
