--- a/style.css
+++ b/style.css
@@ -5,12 +5,26 @@
 
 .main {
     background-image: url(assets/images/bg.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: max(1000px, 100%);
     height: 80%;
+    position: relative;
 }
 
 .main.box {
     height: 80%;
     width: 100%;
     opacity: 0.44;
+    position: absolute;
+    top: 0%;
     background-color: black;
+}
+
+nav {
+    max-width: 80%;
+    justify-content: space-between;
+    margin: auto;
+    display: flex;
+    align-items: center;
 }
