--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 .main {
-    background-image: url(assets/images/bg.jpg);
+    background-image: url("assets/images/bg.jpg");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: max(1000px, 100%);
