update index.html and style.css

--- a/style.css
+++ b/style.css
@@ -27,4 +27,27 @@ nav {
     margin: auto;
     display: flex;
     align-items: center;
+    height: 65px;
+}
+
+nav img {
+    color: red;
+    width: 120px;
+    position: relative;
+    z-index: 10;
+}
+
+nav button {
+    position: relative;
+    z-index: 10;
+}
+
+.hero {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: white;
+    position: relative;
 }
