--- a/style.css
+++ b/style.css
@@ -1,55 +1,57 @@
-@import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@600&family=Poppins:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Martel+Sans:wght@600&family=Poppins:wght@300&display=swap");
 
-*{
-    padding: 0;
-    margin: 0;
+* {
+  padding: 0;
+  margin: 0;
+  font-family: "Poppins", sans-serif;
 }
 
 .main {
-    background-image: url("assets/images/bg.jpg");
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: max(1000px, 100%);
-    height: 80%;
-    position: relative;
+  background-image: url("assets/images/bg.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: max(1000px, 100%);
+  height: 80%;
+  position: relative;
 }
 
 .main .box {
-    height: 80%;
-    width: 100%;
-    opacity: 0.44;
-    position: absolute;
-    top: 0%;
-    background-color: black;
+  height: 80%;
+  width: 100%;
+  opacity: 0.44;
+  position: absolute;
+  top: 0%;
+  background-color: black;
 }
 
 nav {
-    max-width: 80%;
-    justify-content: space-between;
-    margin: auto;
-    display: flex;
-    align-items: center;
-    height: 65px;
+  max-width: 80%;
+  justify-content: space-between;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  height: 65px;
 }
 
 nav img {
-    color: red;
-    width: 120px;
-    position: relative;
-    z-index: 10;
+  color: red;
+  width: 120px;
+  position: relative;
+  z-index: 10;
 }
 
 nav button {
-    position: relative;
-    z-index: 10;
+  position: relative;
+  z-index: 10;
 }
 
 .hero {
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    color: white;
-    position: relative;
+  font-family: "Martel Sans", sans-serif;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: white;
+  position: relative;
 }
