--- a/style.css
+++ b/style.css
@@ -6,17 +6,21 @@
   font-family: "Poppins", sans-serif;
 }
 
+body {
+    background-color: black;
+}
+
 .main {
   background-image: url("assets/images/bg.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: max(1000px, 100%);
-  height: 80%;
+  height: 70%;
   position: relative;
 }
 
 .main .box {
-  height: 80%;
+  height: 70%;
   width: 100%;
   opacity: 0.44;
   position: absolute;
@@ -54,4 +58,29 @@ nav button {
   flex-direction: column;
   color: white;
   position: relative;
+  gap: 20px;
+  padding: 30px;
+}
+
+.hero> :nth-child(1) {
+    font-weight: 900;
+    font-size: 48px;
+    text-align: center;
+}
+
+.hero> :nth-child(2) {
+    font-size: 24px;
+    font-weight: 400;
+    text-align: center;
+}
+
+.hero> :nth-child(3) {
+    font-size: 20px;
+    font-weight: 400;
+    text-align: center;
+}
+
+.seperation {
+    height: 11px;
+    background-color: gray;
 }
