--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ nav button {
 
 .hero {
   font-family: "Martel Sans", sans-serif;
-  height: 100%;
+  height: calc(100% - 62px);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -59,7 +59,7 @@ nav button {
   color: white;
   position: relative;
   gap: 20px;
-  padding: 30px;
+  padding: 0 30px;
 }
 
 .hero> :nth-child(1) {
