--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Martel+Sans:wght@600&family=Poppins:wght@300&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+
 
 * {
   padding: 0;
   margin: 0;
-  font-family: "Poppins", sans-serif;
 }
 
 body {
@@ -22,7 +22,7 @@ body {
 .main .box {
   height: 70%;
   width: 100%;
-  opacity: 0.44;
+  opacity: 0.65;
   position: absolute;
   top: 0%;
   background-color: black;
@@ -63,6 +63,7 @@ nav button {
 }
 
 .hero> :nth-child(1) {
+    font-family:  'Poppins', sans-serif;
     font-weight: 900;
     font-size: 48px;
     text-align: center;
@@ -81,6 +82,42 @@ nav button {
 }
 
 .seperation {
-    height: 11px;
-    background-color: gray;
+    height: 7px;
+    background-color: rgb(46, 44, 44);
+}
+
+.btn {
+    padding: 3px 8px;
+    font-weight: bold;
+    background-color: white;
+}
+
+.btn-red {
+    padding: 3px 24px;
+    background-color: red;
+    color: white;
+    font-size: 20px;
+    border-radius: 4px;
+}
+
+
+.hero -buttons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+}
+
+.main input {
+    padding: 7px 101px 8px 14px;
+    font-weight: 900;
+    font-size: 20px;
+    border-radius: 4px;
+    background-color: rgba(23, 23, 23, 0.7);
+    border: 1px solid rgba(246, 238, 238, 0.5);
+}
+
+.btn-red-sm {
+    background-color: red;
+    color: white;
 }
