--- a/style.css
+++ b/style.css
@@ -88,8 +88,12 @@ nav button {
 
 .btn {
     padding: 3px 8px;
-    font-weight: bold;
-    background-color: white;
+    font-weight: 400;
+    color: white;
+    background-color: rgba(248, 243, 243, 0.342);
+    border-radius: 4px;
+    border: 1px solid white;
+    cursor: pointer;
 }
 
 .btn-red {
@@ -98,8 +102,13 @@ nav button {
     color: white;
     font-size: 20px;
     border-radius: 4px;
+    font-weight: 400;
 }
 
+.btn-red-sm {
+  background-color: red;
+  color: white;
+}
 
 .hero -buttons {
     display: flex;
@@ -110,14 +119,34 @@ nav button {
 
 .main input {
     padding: 7px 101px 8px 14px;
-    font-weight: 900;
+    color: white;
     font-size: 20px;
     border-radius: 4px;
     background-color: rgba(23, 23, 23, 0.7);
     border: 1px solid rgba(246, 238, 238, 0.5);
 }
 
-.btn-red-sm {
-    background-color: red;
-    color: white;
+.first {
+  display: flex;
+  justify-content: center;
+  max-width: 50%;
+  margin: auto;
+  color: white;
+  align-items: center;
+}
+
+.secImg {
+  position: relative;
+}
+
+.secImg img {
+  width: 30%;
+  position: relative;
+  z-index: 10;
+}
+
+.secImg video {
+  position: absolute;
+  top: 51px;
+  right: 0;
 }
