--- a/style.css
+++ b/style.css
@@ -150,3 +150,17 @@ nav button {
   top: 51px;
   right: 0;
 }
+
+section.first > div {
+  display: flex;
+  flex-direction: column;
+}
+
+section.first > div :nth-child(1) {
+  font-weight: bolder;
+  font-size: 48px;
+}
+
+section.first > div :nth-child(2) {
+  font-size: 24px;
+}
