--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap");
 
 * {
   padding: 0;
@@ -7,7 +6,7 @@
 }
 
 body {
-    background-color: black;
+  background-color: black;
 }
 
 .main {
@@ -62,47 +61,47 @@ nav button {
   padding: 0 30px;
 }
 
-.hero> :nth-child(1) {
-    font-family:  'Poppins', sans-serif;
-    font-weight: 900;
-    font-size: 48px;
-    text-align: center;
+.hero > :nth-child(1) {
+  font-family: "Poppins", sans-serif;
+  font-weight: 900;
+  font-size: 48px;
+  text-align: center;
 }
 
-.hero> :nth-child(2) {
-    font-size: 24px;
-    font-weight: 400;
-    text-align: center;
+.hero > :nth-child(2) {
+  font-size: 24px;
+  font-weight: 400;
+  text-align: center;
 }
 
-.hero> :nth-child(3) {
-    font-size: 20px;
-    font-weight: 400;
-    text-align: center;
+.hero > :nth-child(3) {
+  font-size: 20px;
+  font-weight: 400;
+  text-align: center;
 }
 
 .seperation {
-    height: 7px;
-    background-color: rgb(46, 44, 44);
+  height: 7px;
+  background-color: rgb(46, 44, 44);
 }
 
 .btn {
-    padding: 3px 8px;
-    font-weight: 400;
-    color: white;
-    background-color: rgba(248, 243, 243, 0.342);
-    border-radius: 4px;
-    border: 1px solid white;
-    cursor: pointer;
+  padding: 3px 8px;
+  font-weight: 400;
+  color: white;
+  background-color: rgba(248, 243, 243, 0.342);
+  border-radius: 4px;
+  border: 1px solid white;
+  cursor: pointer;
 }
 
 .btn-red {
-    padding: 3px 24px;
-    background-color: red;
-    color: white;
-    font-size: 20px;
-    border-radius: 4px;
-    font-weight: 400;
+  padding: 3px 24px;
+  background-color: red;
+  color: white;
+  font-size: 20px;
+  border-radius: 4px;
+  font-weight: 400;
 }
 
 .btn-red-sm {
@@ -111,19 +110,19 @@ nav button {
 }
 
 .hero -buttons {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
 }
 
 .main input {
-    padding: 7px 101px 8px 14px;
-    color: white;
-    font-size: 20px;
-    border-radius: 4px;
-    background-color: rgba(23, 23, 23, 0.7);
-    border: 1px solid rgba(246, 238, 238, 0.5);
+  padding: 7px 101px 8px 14px;
+  color: white;
+  font-size: 20px;
+  border-radius: 4px;
+  background-color: rgba(23, 23, 23, 0.7);
+  border: 1px solid rgba(246, 238, 238, 0.5);
 }
 
 .first {
@@ -163,4 +162,37 @@ section.first > div :nth-child(1) {
 
 section.first > div :nth-child(2) {
   font-size: 24px;
+}
+
+.faq h2 {
+  text-align: center;
+  font-size: 48px;
+}
+
+.faq {
+  background-color: black;
+  color: white;
+  padding: 34px;
+}
+
+.faqbox:hover {
+  background-color: rgb(40, 40, 40);
+  color: white;
+}
+
+.faqbox svg {
+  filter: invert(1);
+}
+
+.faqbox {
+  font-size: 24px;
+  color: white;
+  transition: all 1s ease-out;
+  display: flex;
+  justify-content: space-between;
+  background-color: #2d2d2d;
+  padding: 24px;
+  max-width: 40%;
+  margin: 30px auto;
+  cursor: pointer;
 }
